[package]
name = "rt_map"
version = "0.5.2"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Runtime managed mutable borrowing from a map."
repository = "https://github.com/azriel91/rt_map"
documentation = "https://docs.rs/rt_map/"
readme = "README.md"
keywords = ["map", "runtime", "borrow"]
license = "MIT OR Apache-2.0"

[dependencies]
rt_ref = "0.2.0"

[features]
unsafe_debug = ["rt_ref/unsafe_debug"]
